Start movement event insertion
